--- a/source/styles/layout/_header.scss
+++ b/source/styles/layout/_header.scss
@@ -24,7 +24,7 @@
     .ready & {
       @include animation(fade-in-up $time $curve both);
 
-      @for $i from 1 through 5 {
+      @for $i from 0 through 4 {
         &:nth-child(#{$i}) {
           @include animation-delay($i * 0.1s);
         }
@@ -98,7 +98,7 @@
     .ready & {
       @include animation(fade-in-up $time $curve both);
 
-      @for $i from 1 through 5 {
+      @for $i from 0 through 4 {
         &:nth-child(#{$i}) {
           @include animation-delay($i * 0.1s);
         }
