--- a/source/styles/layout/_nav.scss
+++ b/source/styles/layout/_nav.scss
@@ -105,8 +105,7 @@
   }
 
   &:hover,
-  &:focus,
-  .has-dropdown:hover & {
+  &:focus {
     color: $diverst-white;
   }
 
@@ -125,6 +124,10 @@
 
   .index & {
     @include filter(drop-shadow(0 1px 2px rgba(0,0,0,0.2)));
+  }
+
+  .nav__link:hover + & {
+    fill: $diverst-white;
   }
 
   .js-product-nav-open & {
@@ -155,7 +158,7 @@
   margin: 0;
   background-color: $diverst-white;
   text-align: left;
-  z-index: 9999;
+  z-index: 9998;
   -webkit-overflow-scrolling: touch;
   box-shadow: 0px 0px 0px 0px rgba(#000, 0.3);
   @include transform(translate3d(100%, 0, 0));
