--- a/source/styles/layout/_product-nav.scss
+++ b/source/styles/layout/_product-nav.scss
@@ -7,16 +7,12 @@
   width: 100%;
   background-color: $diverst-white;
   display: none;
-  @include transform(translate3d(0, -100%, 0));
-  @include transition(transform $time $curve);
+  z-index: 9996;
+  @include transition(transform $time $curve, opacity $time $curve);
 
   @include mq(medium) {
     @include display(flex);
     @include align-items(center);
-  }
-
-  .js-product-nav-open & {
-    @include transform(none);
   }
 }
 
@@ -24,11 +20,33 @@
   text-align: center;
   height: 200px;
   padding: 0 $gutter/2;
+  opacity: 0;
   @include display(flex);
   @include flex-direction(column);
   @include align-items(center);
   @include justify-content(center);
   @include flex(1);
+  @include transform(translate3d(0, $gutter, 0));
+  @include transition(transform $time $curve, opacity $time $curve);
+
+  > * {
+    @include transition(transform $time/2 $curve);
+  }
+
+  &:hover > * {
+    @include transform(translate3d(0, -3px, 0));
+  }
+
+  .js-product-nav-open & {
+    opacity: 1;
+    @include transform(none);
+
+    @for $i from 0 through 5 {
+      &:nth-child(#{$i}) {
+        @include transition-delay($i * 0.05s);
+      }
+    }
+  }
 
   @include mq(large) {
     height: 260px;
