--- a/source/styles/modules/_overlay.scss
+++ b/source/styles/modules/_overlay.scss
@@ -2,7 +2,7 @@
 
 .overlay {
   position: fixed;
-  z-index: 9998;
+  z-index: 9997;
   top: 0;
   left: 0;
   width: 100%;
